--- a/index.html
+++ b/index.html
@@ -4,11 +4,14 @@
   <meta charset="utf-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
   <title>Before you start · Wellcome ECA Remit Checker (Prototype)</title>
+
+  <!-- Inter font for a clean, Wellcome-like look -->
   https://fonts.googleapis.com
   https://fonts.gstatic.com
   https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap
+
   <style>
-    /* ---- Light UI matching the inspiration ---- */
+    /* ====== Light style (close to your inspiration) ====== */
     :root{
       --bg:#ffffff; --ink:#111111; --muted:#4b5563; --link:#0b5cab;
       --border:#e5e7eb; --focus:#1d4ed8; --accent:#ffdd00; --accent-ink:#111111;
@@ -24,7 +27,6 @@
     }
     a{color:var(--link)}
     .wrap{max-width:var(--max); margin:0 auto; padding:0 16px}
-
     header{padding:32px 0 20px; border-bottom:1px solid var(--border)}
     h1{font-size:32px; line-height:1.2; margin:0 0 6px; font-weight:700; letter-spacing:-0.01em}
     .lede{margin:0; color:var(--muted); font-size:16px}
@@ -32,12 +34,15 @@
     main{padding:24px 0}
     .block{display:block}
     .label{font-weight:600; margin-bottom:8px}
+
     textarea{
       width:100%; min-height:230px; resize:vertical;
       border:1px solid var(--border); border-radius:var(--radius);
       padding:12px 14px; font:inherit; color:var(--ink); background:#fff;
     }
-    textarea:focus,select:focus,input:focus{ outline:3px solid rgba(29,78,216,.25); border-color:var(--focus) }
+    textarea:focus,select:focus,input:focus{
+      outline:3px solid rgba(29,78,216,.25); border-color:var(--focus)
+    }
 
     .row{display:flex; flex-wrap:wrap; gap:12px; margin-top:var(--gap); align-items:center}
     select,input[type="number"]{
@@ -60,16 +65,17 @@
     .btn.primary{ background:#111; border-color:#111; color:#fff }
     .btn.ghost{ background:#fff; border:1px solid var(--border); color:var(--muted) }
 
-    /* Yellow guidance panel directly under the form */
+    /* Yellow guidance panel under the form */
     .guidance{
-      margin-top:24px; background:#fff6b5; border:1px solid #f2e48a; border-radius:var(--radius); padding:16px;
+      margin-top:24px; background:#fff6b5; border:1px solid #f2e48a;
+      border-radius:var(--radius); padding:16px;
     }
     .guidance h2{margin:0 0 8px; font-size:18px}
     .guidance p{margin:0 0 8px; color:#1f2937}
     .links{margin:8px 0 0; padding-left:18px}
     .links li{margin:4px 0}
 
-    /* Results (simple, clean blocks) */
+    /* Results */
     #results{margin-top:28px}
     #results h2{margin:0 0 10px; font-size:22px}
     .scorecards{display:grid; grid-template-columns:repeat(3,minmax(0,1fr)); gap:12px}
@@ -89,6 +95,10 @@
     footer{border-top:1px solid var(--border); margin-top:28px; padding:14px 0}
     .tiny{font-size:12px; color:var(--muted)}
     .hidden{display:none}
+
+    /* Tiny toast */
+    #toast{position:fixed;left:50%;top:18px;transform:translateX(-50%);
+      background:#111;color:#fff;padding:10px 14px;border-radius:8px;z-index:9999;font-weight:600;box-shadow:0 6px 20px rgba(0,0,0,.2);display:none}
   </style>
 </head>
 <body>
@@ -103,6 +113,7 @@
   </header>
 
   <main class="wrap">
+    <!-- FORM -->
     <form id="checkerForm" novalidate>
       <label class="block">
         <div class="label">Enter your proposal summary</div>
@@ -199,9 +210,204 @@
       </div>
     </form>
 
+    <!-- Yellow guidance panel -->
     <section class="guidance" aria-labelledby="how-it-works">
       <h2 id="how-it-works">How Wellcome grant funding works</h2>
       <p>Use these links to check scope, eligibility and conditions before you complete a full application.</p>
       <ul class="links">
-        <li><a target="_blank" rel="noreferrer" href="https://wellcome.org/research-funding">Discovery Research remit (what we fund)</a></li>
-        <li><a target="_blank" rel="noreferrer" href="https://wellcome.org/research-funding
+        <li><a target="_blank" rel="noreferrer" href="https://wellcome.org/research-funding/guidance/prepare-to remit (what we fund)</a></li>
+        <li><a target="_blank" rel="noreferrer" href="https://wellcome.org/research-funding/schemes/wellcome-early-career-awards">Early‑Career Award (scheme page)</a></li>
+        <li><a target="_blank" rel="noreferrer" href="https://wellcome.org/research-funding">Grant conditions & policies</a></li>
+        <li><a target="_blank" rel="noreferrer" href="https://wellcome.org/research-funding">Early‑career researcher guidance</a></li>
+      </ul>
+      <p><strong>Need help?</strong> Contact Wellcome Funding Information Advisers via the “Contact us” links on the pages above.</p>
+    </section>
+
+    <!-- RESULTS -->
+    <section id="results" class="hidden">
+      <h2>Results</h2>
+      <div class="scorecards">
+        <div class="scorecard">
+          <h3>Eligibility</h3>
+          <div class="score" id="eligScore">–</div>
+          <ul id="eligReasons" class="reasons"></ul>
+        </div>
+        <div class="scorecard">
+          <h3>Remit fit</h3>
+          <div class="score" id="remitScore">–</div>
+          <ul id="remitReasons" class="reasons"></ul>
+        </div>
+        <div class="scorecard">
+          <h3>Assessment (50/25/25)</h3>
+          <div class="stack">
+            <div class="bar"><span>Proposal (50%)</span><progress id="propProg" max="100" value="0"></progress></div>
+            <div class="bar"><span>Skills & experience (25%)</span><progress id="skillsProg" max="100" value="0"></progress></div>
+            <div class="bar"><span>Research environment (25%)</span><progress id="envProg" max="100" value="0"></progress></div>
+          </div>
+          <ul id="assessNotes" class="reasons"></ul>
+        </div>
+      </div>
+
+      <div class="cols">
+        <div class="panel">
+          <h3>Strengths</h3>
+          <ul id="strengths"></ul>
+        </div>
+        <div class="panel">
+          <h3>Risks</h3>
+          <ul id="risks" class="risks"></ul>
+        </div>
+      </div>
+
+      <div class="panel" style="margin-top:12px">
+        <h3>Suggestions to tighten your summary</h3>
+        <ol id="suggestions"></ol>
+      </div>
+    </section>
+  </main>
+
+  <footer>
+    <div class="wrap tiny">
+      <p>Prototype for product exploration. Sources: Wellcome ECA scheme & Discovery Research remit. No affiliation implied. No data leaves your browser.</p>
+    </div>
+  </footer>
+
+  <div id="toast" role="status" aria-live="polite"></div>
+
+  <!-- ====== Inline script: attaches the button handler and runs the analysis ====== -->
+  <script>
+    const $ = id => document.getElementById(id);
+    const analyzeBtn = $('analyzeBtn'), results = $('results'), exportBtn = $('exportBtn'), resetBtn = $('resetBtn');
+
+    analyzeBtn.addEventListener('click', runAnalysis);
+    exportBtn.addEventListener('click', () => window.print());
+    resetBtn.addEventListener('click', () => { $('checkerForm').reset(); results.classList.add('hidden'); });
+
+    function runAnalysis(){
+      const summary = $('summary').value.trim();
+
+      // Basic validation
+      if (!summary) { $('summary').focus(); toast('Please paste a short proposal summary first.'); return; }
+
+      // Button affordance
+      const prev = analyzeBtn.textContent;
+      analyzeBtn.disabled = true; analyzeBtn.textContent = 'Analysing…';
+
+      try {
+        // Gather checklist values
+        const training = $('training').value;
+        const postdocYears = parseFloat(($('postdocYears').value||'0'));
+        const timePct = parseFloat(($('timePct').value||'0'));
+        const orgLoc = $('orgLoc').value;
+        const coapps = $('coapplicants').value === 'yes';
+
+        const trialFocus = $('trialFocus').value === 'Yes';
+        const diagnosticFocus = $('diagnosticFocus').value === 'Yes';
+        const animalOut = $('animalOut').value === 'Yes';
+        const standalone = $('standalone').value === 'Yes';
+
+        // Eligibility (0-100)
+        let elig=100, eligReasons=[];
+        if(training==='none'){ elig-=50; eligReasons.push('Needs PhD or ≥4 years equivalent research experience.'); }
+        if(postdocYears>3){ elig-=10; eligReasons.push('Postdoctoral experience >3 years – add context (breaks, part‑time, discipline change).'); }
+        if(timePct<80){ elig-=25; eligReasons.push('Commit at least 80% of research time to the project (≤20% other duties).'); }
+        if(orgLoc==='india'||orgLoc==='china'){ elig-=100; eligReasons.push('Administering organisation location is ineligible for ECA.'); }
+        if(coapps){ elig-=25; eligReasons.push('Co‑applicants are not accepted for the Early‑Career Award.'); }
+        elig = clamp(elig);
+
+        // Remit fit (0-100)
+        let remit=100, remitReasons=[];
+        if(trialFocus || /randomi(s|z)ed|phase\s?(I{1,3}|iv|2|3)/i.test(summary)){
+          remit-=35; remitReasons.push('Large clinical trial / efficacy‑testing focus – Discovery remit prioritises understanding/mechanism.');
+        }
+        if(diagnosticFocus || /(diagnostic|screening|clinical decision support|triage)\b/i.test(summary)){
+          remit-=25; remitReasons.push('Primary aim appears diagnostic/clinical‑care oriented – emphasise benefits to research understanding or methods.');
+        }
+        if(animalOut){ remit-=40; remitReasons.push('Animal disease not relevant to humans – out of remit unless zoonotic or a model for human biology.'); }
+        if(standalone || (/(database|registry|repository)\b/i.test(summary) && !/(research question|hypothes|aim)/i.test(summary))){
+          remit-=20; remitReasons.push('Stand‑alone resource without clear research questions – only in remit if integral to answering them.');
+        }
+        if (/(mechanism|causal|pathophysiology|fundamental|novel method|framework|tool|conceptual|theoretical|insight|understanding|hypothesis|explor(e|atory))/i.test(summary)){
+          remit += 5;
+        }
+        remit = clamp(remit);
+
+        // Assessment heuristics
+        const len = summary.split(/\s+/).filter(Boolean).length;
+        const hasAims    = /(aim|objective|we propose|we will)/i.test(summary);
+        const hasMethods = /(method|approach|data|model|experiment|fieldwork|analysis|sample|cohort|interview|ethnograph|survey)/i.test(summary);
+        const hasRisks   = /(risk|limitation|challenge|mitigat)/i.test(summary);
+        const hasTeam    = /(mentor|sponsor|collaborat|training|skills|develop)/i.test(summary);
+        const hasEnv     = /(environment|host|facilit(y|ies)|infrastructure|culture|inclusive|open|data sharing)/i.test(summary);
+        const novelty    = /(novel|first|innovative|creative|new|advance)/i.test(summary);
+
+        let prop=10; prop+=hasAims?25:0; prop+=hasMethods?25:0; prop+=novelty?15:0; prop+=hasRisks?15:0; prop+=(len>200?10:0); prop=Math.min(100,prop);
+        let skills=10; skills+=hasTeam?40:0; skills+=(postdocYears<=3?10:5); skills+=(training!=='none'?20:0); skills=Math.min(100,skills);
+        let env=10; env+=hasEnv?60:0; env=Math.min(100,env);
+
+        // Reveal & render
+        results.classList.remove('hidden');
+
+        $('eligScore').textContent = elig;
+        $('eligReasons').innerHTML = renderList(eligReasons);
+
+        $('remitScore').textContent = remit;
+        $('remitReasons').innerHTML = renderList(remitReasons);
+
+        $('propProg').value = prop; $('skillsProg').value = skills; $('envProg').value = env;
+        $('assessNotes').innerHTML =
+          `<li>Proposal ~${len} words; heuristic quality score ${Math.round(prop)}.</li>`+
+          `<li>Skills/experience proxy ${Math.round(skills)}; Environment proxy ${Math.round(env)}.</li>`;
+
+        const strengths=[], risks=[];
+        if(novelty) strengths.push('Signals of novelty/creativity are present.');
+        if(hasMethods) strengths.push('Methods/approach described.');
+        if(hasRisks) strengths.push('Risks/mitigations acknowledged.');
+        if(hasTeam) strengths.push('Development/training/collaboration elements referenced.');
+        if(hasEnv) strengths.push('Positive research environment and culture cues.');
+        if(!hasAims) risks.push('Make the aims/objectives explicit and succinct.');
+        if(!hasMethods) risks.push('Describe the methodology and why it’s the right approach.');
+        if(!hasRisks) risks.push('Add key risks/uncertainties and mitigations.');
+        if(remit<70) risks.push('Reframe to emphasise discovery‑led understanding/mechanism.');
+        if(elig<70) risks.push('Address eligibility gaps (training, time commitment, co‑applicants, admin org).');
+
+        $('strengths').innerHTML = renderList(strengths,true);
+        $('risks').innerHTML     = renderList(risks,true);
+
+        const sugg=[];
+        if(!hasAims)    sugg.push('Open with a <strong>bold, discovery‑led question</strong> and 2–3 concise aims.');
+        if(!hasMethods) sugg.push('Outline key <strong>methods/approach</strong> and why they best answer the question.');
+        if(!/insight|understanding|mechanism/i.test(summary)) sugg.push('State the <strong>new knowledge/insight</strong> expected and how it shifts understanding.');
+        if(!hasRisks)   sugg.push('List <strong>main risks/uncertainties</strong> and brief mitigations.');
+        if(!hasTeam)    sugg.push('Mention <strong>training/skills development</strong> and any collaborators’ roles.');
+        if(!hasEnv)     sugg.push('Reference your <strong>research environment</strong> and an <strong>inclusive, open culture</strong>.');
+        if(trialFocus||diagnosticFocus) sugg.push('Clarify any trial/diagnostic work probes <strong>mechanism</strong> or <strong>proof‑of‑concept</strong> within a discovery programme.');
+        $('suggestions').innerHTML = sugg.length ? sugg.map(s => `<li>${s}</li>`).join('') : '<li>Looks good. Consider minor tightening for clarity.</li>';
+
+        results.scrollIntoView({behavior:'smooth', block:'start'});
+
+      } catch(e){
+        console.error(e); toast('Something went wrong while analysing. See console for details.');
+      } finally {
+        analyzeBtn.disabled = false; analyzeBtn.textContent = 'Submit proposal summary';
+      }
+    }
+
+    // Helpers
+    function renderList(arr, allowEmpty){
+      if(!arr || !arr.length) return allowEmpty ? '<li>—</li>' : '<li>No major issues detected.</li>';
+      return arr.map(s=>`<li>${escapeHtml(s)}</li>`).join('');
+    }
+    function escapeHtml(str){
+      const map = {"&":"&amp;","<":"&lt;",">":"&gt;","\"":"&quot;","'":"&#039;"};
+      return String(str).replace(/[&<>"']/g, ch => map[ch]);
+    }
+    function clamp(n){ return Math.max(0, Math.min(100,n)); }
+    function toast(msg){
+      const t = $('toast');
+      t.textContent = msg; t.style.display = 'block';
+      clearTimeout(t._h); t._h = setTimeout(()=> t.style.display='none', 2500);
+    }
+  </script>
+</body>
+</html>
